@@ -1,5 +1,4 @@
 * Hühner NPCs
 * Level-Auswahl
 * Dropdown "FPS beschränken" im Launcher
-* Checkbox "Borderless" im Launcher
 * Autofahr-Animation am Levelende
